update unit and benchmark testing